--- a/Frontend/App.html
+++ b/Frontend/App.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact App</title>
     <link rel="stylesheet" href="App.css">
+    <link rel="stylesheet" href="Views/contactDetail.css">
+    <link rel="stylesheet" href="Views/contactList.css">
 </head>
 
 <body>
